--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -28,6 +30,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.1.0",
     "zod": "^4.3.6",
