--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "framer-motion": "^12.29.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.539.0",
-    "next": "15.4.5",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
     "stripe": "^20.2.0",
